add composite repository to upload module